refact customerController
