# src/models/Customer.js
@@ -1,15 +1,28 @@
 import mongoose from "mongoose";
 
 const customerSchema = new mongoose.Schema({
+    user: {
+        type: mongoose.Schema.Types.ObjectId,
+        ref: "User",
+    },
     nome: {
         type: String,
         required: true,
         trim: true,
     },
-    cnpj: {
+    nomeFantasia: {
+        type: String,
+        required: true,
+    },
+    documento: {
         type: String,
         required: true,
         unique: true,
+    },
+    documentoTipo: {
+        type: String,
+        enum: ["cpf", "cnpj"],
+        required: true,
     },
     contato: {
         type: String,
